change container-wraper in input files, fix navigation links in index.html

--- a/src/css/input.css
+++ b/src/css/input.css
@@ -28,7 +28,7 @@ body{
 
  /* all container wraper */
 .container-wrapper {
-    @apply container max-w-[1151px] w-full mx-auto px-2
+    @apply container max-w-[1151px] w-full mx-auto px-2 xl:px-0
  }
 
 /* btn learn more, contact */
